force-app/main/default/objects/Contact_Availability__c/Contact_Availability__c.object-meta.xml
<CustomObject>
    <description>To track the contact availability for session scheduling and appointments.</description>
    <label>Contact Availability</label>
    <nameField>
        <displayFormat>CAV-{00000}</displayFormat>
        <label>Contact Availability #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>