force-app/main/default/objects/Contact_Availability__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campus</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Campus</value>
        </filterItems>
        <infoMessage>Please select a campus account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Availabilities</relationshipLabel>
    <relationshipName>Contact_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>