force-app/main/default/objects/Contact_Availability__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Availabilities</relationshipLabel>
    <relationshipName>Contact_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>