force-app/main/default/objects/Contact_Availability__c/fields/Friday_To__c.field-meta.xml
<CustomField>
    <fullName>Friday_To__c</fullName>
    <label>Friday (To)</label>
    <type>Time</type>
</CustomField>