force-app/main/default/objects/Contact_Availability__c/fields/Monday_From__c.field-meta.xml
<CustomField>
    <fullName>Monday_From__c</fullName>
    <label>Monday (From)</label>
    <type>Time</type>
</CustomField>