force-app/main/default/objects/Contact_Availability__c/fields/Sunday_From__c.field-meta.xml
<CustomField>
    <fullName>Sunday_From__c</fullName>
    <label>Sunday (From)</label>
    <type>Time</type>
</CustomField>