force-app/main/default/objects/Contact_Availability__c/fields/Thursday_To__c.field-meta.xml
<CustomField>
    <fullName>Thursday_To__c</fullName>
    <label>Thursday (To)</label>
    <type>Time</type>
</CustomField>