force-app/main/default/objects/Contact_Availability__c/fields/Tuesday_From__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_From__c</fullName>
    <label>Tuesday (From)</label>
    <type>Time</type>
</CustomField>