force-app/main/default/objects/Contact_Availability__c/fields/Tuesday_To__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_To__c</fullName>
    <label>Tuesday (To)</label>
    <type>Time</type>
</CustomField>