force-app/main/default/objects/Contact_Availability__c/fields/Wednesday_From__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_From__c</fullName>
    <label>Wednesday (From)</label>
    <type>Time</type>
</CustomField>