force-app/main/default/objects/Contact_Availability__c/fields/Wednesday_To__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_To__c</fullName>
    <label>Wednesday (To)</label>
    <type>Time</type>
</CustomField>